Fix drop-down navigation going behind some elements. Language picker fixes.

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -98,6 +98,7 @@ body {
     flex-direction: column;
     min-width: 200px;
     transform: translateY(100px);
+    z-index: 9999;
 }
 
 .nav2nd li {
